# urpe-agent-system

./: PLAN.md  PROGRESS.md  README.md  SPEC.md  config.yaml  pyproject.toml
data/: urpe.db
src/urpe/: __init__.py  agent.py  cli.py  config.py  llm.py
src/urpe/memory/: __init__.py  sqlite.py
src/urpe/tools/: __init__.py  base.py  shell.py
src/urpe_agent_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_memory.py  test_tools.py
